# int-boundary-conditions

./: .clang-format  CMakeLists.txt  licence.txt  readme.md
.github/workflows/: format.yml  unit_tests_debug.yml  unit_tests_release.yml
include/: boundary_conditions.hpp
misc/: old_conversion.hpp
tests/: CMakeLists.txt  can_add_test.cpp  can_promote_test.cpp
